# PermutedMnist2025

Projet/: .gitignore  README.md  Report.ipynb  pyproject.toml  requirements.txt
Projet/.github/workflows/: main.yml
Projet/PermutedMnist2025/: Report.ipynb  RunAgents.py  run_benchmark.ipynb
Projet/PermutedMnist2025/agents/: BestAgentMLP.py  ExtraTreeAgent5features.py  ExtraTreeAgent9features.py  KNNFaiss.py  LGBEXTHybride.py  LGBMAgent5features.py  MLPAgentBase.py  MLPBoost18features.py  MLPv2_1.py  MetaAdapModBESTT.py  utils.py
Projet/PermutedMnist2025/bonus/implementation_papier_de_recherche/: ContinualAgent.py
Projet/PermutedMnist2025/brouillon/: MetaLearningEssai.ipynb  agent.ipynb  starter_weights.json  starter_weights_MEDIUM_784.json  starter_weights_SHALLOW_784.json
Projet/PermutedMnist2025/soumissions/: BestAgentMLP_results.json  ExtraTreeAgent5features_results.json  ExtraTreeAgent9features_results.json  KNNFaiss_results.json  LGBEXTHybride_results.json  LGBMAgent5features_results.json  MLPAgentBase_results.json
Projet/bonus/implementation_papier_de_recherche/permuted_mnist/env/: permuted_mnist.py
Projet/permuted_mnist_challenge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Projet/soumissions/: BestAgentMLP_results.json  ExtraTreeAgent9features_results.json  KNNFaiss_results.json  LGBEXTHybride_results.json
Projet/tests/: test_agent.py
