[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "permuted_mnist_challenge"
version = "1.0.0"
authors = [
    { name="Ayoub OULAD ALI", email="ayoub.oulad_ali@etu.sorbonne-universite.fr" }]
description = "Agents pour le challenge Permuted MNIST - M2"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# === DÉPENDANCES PRINCIPALES (Runtime) ===
# Celles nécessaires pour faire tourner l'Agent
dependencies = [
    "numpy",
    "torch",
    "scikit-learn",
    "joblib",           # (pour save/load)
    "pandas",           # (Gardé ici, utile pour les résultats)
    "tensorflow"        # (Gardé ici, comme 'optionnel')
]

# === DÉPENDANCES OPTIONNELLES (Dev & Test) ===
[project.optional-dependencies]
dev = [
    "pytest",           # (pour les tests)
    "matplotlib",       # (Déplacé ici, pour analyse)
    "seaborn",          # (Déplacé ici, pour analyse)
    "jupyter"           # (Déplacé ici, pour les notebooks)
]


[project.urls]
Homepage = "https://github.com/Ayouboa30/PermutedMnist2025"
Issues = "https://github.com/Ayouboa30/PermutedMnist2025/issues" 
# (J'ai corrigé votre URL 'Issues' pour pointer vers votre repo)